--- a/t/lib/Test/config.yml
+++ b/t/lib/Test/config.yml
@@ -1,7 +1,6 @@
 log: core
 logger: capture
 show_errors: 1
-session: simple
 template: simple
 plugins:
   Auth::Extensible:
@@ -22,6 +21,10 @@ plugins:
         username_column: username
         password_column: password
         password_check: check_password
+  DBIC:
+    default:
+      schema_class: Interchange6::Schema
+      connection_info: foo
   Interchange6::Routes:
     checkout:
       active: 1
