--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ perl:
   - "5.16"
   - "5.14"
 install:
+  - cpanm --quiet --notest git://github.com/interchange/Interchange6.git
+  - cpanm --quiet --notest git://github.com/interchange/interchange6-schema.git
   - cpanm --quiet --notest DBD::Pg http://cpan.metacpan.org/authors/id/T/TJ/TJC/Test-PostgreSQL-1.02.tar.gz DBD::mysql Test::mysqld DateTime::Format::Pg Test::Roo
-  - cpanm --dev --quiet --notest Interchange6::Schema
   - cpanm --quiet --installdeps --notest .
