--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ perl:
 install:
   - cpanm --quiet --notest git://github.com/interchange/Interchange6.git
   - cpanm --quiet --notest git://github.com/interchange/interchange6-schema.git
-  - cpanm --quiet --notest DBD::Pg http://cpan.metacpan.org/authors/id/T/TJ/TJC/Test-PostgreSQL-1.02.tar.gz DBD::mysql Test::mysqld DateTime::Format::Pg Test::Roo
+  - cpanm --quiet --notest DBD::Pg Test::PostgreSQL DBD::mysql Test::mysqld DateTime::Format::Pg Test::Roo
   - cpanm --quiet --installdeps --notest .
